[project]
name = "chronatrix"
version = "0.1.0"
description = "Moteur contextuel pour évaluer des conditions temporelles et environnementales."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Chronatrix" }]
keywords = ["context", "datetime", "weather", "astronomy", "rules"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = [
  "astral>=3.2",
]

[project.urls]
Homepage = "https://github.com/coality/chronatrix"
Repository = "https://github.com/coality/chronatrix"
Issues = "https://github.com/coality/chronatrix/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
